<resources>
    <string name="app_name">Food Bank</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_nav_menu_home">Home</string>
    <string name="bottom_nav_menu_explore">Donation</string>
    <string name="bottom_nav_menu_profile">Profile</string>

    <!-- Authentication Massage -->
    <string name="email_format_error">Please enter a valid email address. Email addresses must be in the format example@gmail.com</string>
    <string name="password_length_error">The password must be at least 6 characters</string>
    <string name="empty_email_and_password">Please enter your email address and password</string>
    <string name="empty_all">Please enter your all information</string>
    <string name="nik_length_error">NIK must be 16 characters</string>
    <string name="full_names_error_contain_number">Your full names contain Number, full names must be Alphabet</string>
    <string name="successful_register">Thanks for creating your account in here, please login</string>
    <string name="failed_register">Failed creating your account or Account is already exist</string>

    <!--  Mockup List Item Booth  -->
    <string-array name="list_item_booth_title">

        <item>Mandiri Booth</item>
        <item>Pesantren Booth</item>
        <item>Kampus Booth</item>
        <item>Bem Booth</item>
        <item>Food Bank Booth</item>

    </string-array>

    <string-array name="list_item_booth_food">

        <item>593 Foods</item>
        <item>100 Foods</item>
        <item>267 Foods</item>
        <item>200 Foods</item>
        <item>492 Foods</item>

    </string-array>

    <string-array name="list_item_booth_location">

        <item>Dago, Bandung</item>
        <item>Cipatat, Bandung Barat</item>
        <item>Cianjur Kota, Cianjur</item>
        <item>Barcelona, Spanyol</item>
        <item>Wano, One Piece World</item>

    </string-array>

    <string-array name="list_item_booth_time">

        <item>12:00 PM</item>
        <item>9:00 AM</item>
        <item>8:00 AM</item>
        <item>7:00 PM</item>
        <item>4:00 PM</item>

    </string-array>

    <!--  Donation About  -->
    <string name="donation_about_title">About</string>
    <string name="donation_about_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <!--  Donation Participants -->
    <string name="donation_participant_title">Participants</string>
    <string name="donation_participant_seeall">see all</string>

    <!--  Donation Other Donations -->
    <string name="donation_other_donations_title">Other donations</string>

    <!--  Mockup List Item Other Donations  -->
    <string-array name="list_item_other_donations_title">

        <item>Zero Hunger Programme</item>
        <item>Waduh Donations</item>
        <item>Donations from Bem</item>
        <item>Google Donations</item>
        <item>Let"'"s Eat</item>

    </string-array>

    <string-array name="list_item_other_donations_description">

        <item>Ini buat deksripsi</item>
        <item>Bentar bingung</item>
        <item>Pegel cok</item>
        <item>Tapi rame</item>
        <item>Maap jelek</item>

    </string-array>

    <!-- Status Booth -->
    <string name="openBooth">Open</string>
    <string name="closeBooth">Close</string>

</resources>